--- a/app/index.html
+++ b/app/index.html
@@ -25,24 +25,51 @@
 <body>
 
 
-    <div class="jumbotron jumbotron-fluid jumbotron--background-image container-shadow">
-        <div class="mobile-menu-container container-shadow">
-            <div class="mobile-logo">
-                <div class="mobile-logo__pf">PF</div>
-                <div class="mobile-logo__d">D</div>
+    <div id="section-home" class="jumbotron jumbotron-fluid jumbotron--background-image container-shadow">
+        <div class="mobile-menu-container">
+            <div class="mobile-logo container-shadow">
+                <div class="logo-normal-colors">
+                    <div class="mobile-logo__pf">PF</div>
+                    <div class="mobile-logo__d">D</div>
+                </div>
+                <div class="logo-inverted-colors">
+                        <div class="mobile-logo__pf">PF</div>
+                        <div class="mobile-logo__d">D</div>
+                </div>
+               
             </div>
             <div class="hamburger-container">
-                <span class="top-line"></span>
-                <span class="middle-line"></span>
-                <span class="bottom-line"></span>
+                <div class="hamburger-wrapper container-shadow">
+                    <span class="top-line"></span>
+                    <span class="middle-line"></span>
+                    <span class="bottom-line"></span>
+                </div>
+                <div class="close-wrapper container-shadow">
+                    <span class="line1"></span>
+                    <span class="line2"></span>
+                </div>
+            </div>
+            <div class="drop-down-menu">
+                <div id="menu-home-button" class="container menu-item">
+                    HOME
+                </div>
+                <div id="menu-portfolio-button" class="container menu-item">
+                    PORTFOLIO
+                </div>
+                <div id="menu-about-button" class="container menu-item">
+                    ABOUT
+                </div>
+                <div id="menu-contact-button" class="container menu-item">
+                    CONTACT
+                </div>
             </div>
 
         </div>
 
         <div class="container header-container">
             <h1 class="display-3 home-text">PAUL
-                <br> &nbsp;&nbsp;&nbsp;FREEMAN
-                <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DESIGN
+                <br>FREEMAN
+                <br>DESIGN
             </h1>
 
         </div>
@@ -61,12 +88,9 @@
         </div>
     </div>
 
-    <div class="container-fluid portfolio-header box-shadow-top">
+    <div id="section-portfolio" class="container-fluid portfolio-header box-shadow-top">
         <strong>Latest Work</strong>
     </div>
-
-
-
 
 
     <!-- PORTFOLIO PROJECT -->
@@ -257,7 +281,7 @@
     <!-- END PORTFOLIO PROJECT -->
 
     <!-- ABOUT ME SECTION -->
-    <div class="container-fluid about-section container-shadow no-gutter">
+    <div id="section-about" class="container-fluid about-section container-shadow no-gutter">
         <div class="about-image-container">
             <!-- <img src="./assets/images/wall-white-black-abstract-66905_scaledDown.jpeg" alt="abstract building picture"> -->
             <div class="container about-section__text-container">
@@ -277,7 +301,7 @@
 
     <!-- CONTACT FORM -->
 
-    <div class="container contact-form-container">
+    <div id="section-contact" class="container contact-form-container">
         <div class="contact-header-content-wrapper">
             <span class="contact-form-header">CONTACT</span class="contact-form-header">
 
@@ -296,7 +320,7 @@
                 <input id="mail-submit" name="submit" type="submit" value="Send E-mail">
             </div>
 
-            
+
 
         </form>
     </div>
@@ -319,10 +343,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
