reveal on scroll finished

--- a/app/index.html
+++ b/app/index.html
@@ -88,13 +88,13 @@
         </div>
     </div>
 
-    <div id="section-portfolio" class="container-fluid portfolio-header box-shadow-top">
+    <div id="section-portfolio" class="container-fluid portfolio-header box-shadow-top scroll-reveal">
         <strong>Latest Work</strong>
     </div>
 
 
     <!-- PORTFOLIO PROJECT -->
-    <div class="container-fluid portfolio-project-container container-shadow">
+    <div class="container-fluid portfolio-project-container container-shadow scroll-reveal">
 
         <div class="project-image-container container-shadow">
             <img src="./assets/images/riversideApp_image_color.jpg" alt="Climbing Wall App Image">
@@ -102,6 +102,7 @@
         <div class="project-description">
             <div class="project-description__header">
                 CLIMBING WALL APP
+                <i class="fa fa-external-link" aria-hidden="true"></i>
             </div>
             <div class="project-description__description-text">
                 A dynamic web app for the climbers of High Point Riverside. Allows users to create and upload problems for the training wall.
@@ -158,7 +159,7 @@
 
 
     <!-- PORTFOLIO PROJECT -->
-    <div class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding container-shadow">
+    <div class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding container-shadow scroll-reveal">
 
         <div class="project-image-container container-shadow">
             <img src="./assets/images/clearViewEscapes.jpg" alt="Clear View Escapes Image">
@@ -166,6 +167,7 @@
         <div class="project-description">
             <div class="project-description__header">
                 CLEAR VIEW ESCAPES
+                <i class="fa fa-external-link" aria-hidden="true"></i>
             </div>
             <div class="project-description__description-text">
                 A travel site optimized for mobile devices and featuring clean design principles.
@@ -218,7 +220,7 @@
     <!-- END PORTFOLIO PROJECT -->
 
     <!-- PORTFOLIO PROJECT -->
-    <div class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding add-b-margin container-shadow">
+    <div class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding add-b-margin container-shadow scroll-reveal">
 
         <div class="project-image-container container-shadow">
             <img src="./assets/images/driftRacerVrSS.png" alt="Drift Racer VR Screenshot">
@@ -226,6 +228,7 @@
         <div class="project-description">
             <div class="project-description__header">
                 DRIFT RACER VR
+                <i class="fa fa-external-link" aria-hidden="true"></i>
             </div>
             <div class="project-description__description-text">
                 A drift racing game developed for the Google Daydream Mobile VR platform.
@@ -317,7 +320,7 @@
             <p class="form-message"></p>
 
             <div class="submit-wrapper">
-                <input id="mail-submit" name="submit" type="submit" value="Send E-mail">
+                <input id="mail-submit" name="submit" type="submit" value="Send">
             </div>
 
 
@@ -351,6 +354,7 @@
         crossorigin="anonymous"></script>
 
     <script src="./assets/scripts/app.js"></script>
+    <script src="./assets/scripts/jquery.waypoints.min.js"></script>
 
 </body>
 
