--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,10 @@
                     <div class="mobile-logo__d">D</div>
                 </div>
                 <div class="logo-inverted-colors">
-                        <div class="mobile-logo__pf">PF</div>
-                        <div class="mobile-logo__d">D</div>
+                    <div class="mobile-logo__pf">PF</div>
+                    <div class="mobile-logo__d">D</div>
                 </div>
-               
+
             </div>
             <div class="hamburger-container">
                 <div class="hamburger-wrapper container-shadow">
@@ -144,8 +144,19 @@
                                 <li>MySql</li>
                                 <li>Hammer.js</li>
                                 <li>Animate.css</li>
-
                             </ul>
+                            <div class="launch-app-button container-shadow">
+                                <i class="fa fa-external-link" aria-hidden="true"></i>
+                                <span class="launch-app-text">LAUNCH APP</span>
+                            </div>
+                            <div class="view-on-github-button container-shadow">
+                                <svg xmlns="http://www.w3.org/2000/svg" aria-label="Github" role="img" viewBox="0 0 512 512">
+                                    <rect width="512" height="512" fill="#171515" rx="0%" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" ""=""></rect>
+                                    <path fill="#fff" d="M119 255c17 30 49 48 102 53-8 6-17 17-18 30-10 6-29 8-44 3-21-7-29-48-61-42-7 1-6 6 0 10 10 6 21 16 26 30 12 31 37 39 77 33v45c0 14-20 18-20 25 0 3 7 3 12 3 10 0 32-9 32-23 0-12 0-52 1-59 0-15 8-20 8-20s1 82-2 92c-4 13-10 11-10 17 0 9 26 2 35-17 7-15 4-95 3-94h7s0 37 1 53c0 17-1 39 9 50 7 7 29 19 29 8 0-6-12-12-12-29v-79c10 0 8 26 8 26l1 48s-2 18 19 25c8 3 24 3 25-1s-20-11-20-25v-49c0-36-5-49-22-60 53-5 86-18 102-53 10-20 12-44 12-62 0-50-24-67-29-76 7-38-1-55-5-60-14-5-48 12-66 24-30-9-94-8-118 2-44-31-67-26-67-26s-15 27-4 66c-15 18-25 31-26 65 0 27 3 44 15 67z"></path>
+                                </svg>
+                                <span class="view-on-github-text">VIEW ON GITHUB</span>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -206,9 +217,18 @@
                                 <li>HTML5</li>
                                 <li>SASS</li>
                                 <li>JS (ES6)</li>
-
-
                             </ul>
+                            <div class="launch-app-button container-shadow">
+                                <i class="fa fa-external-link" aria-hidden="true"></i>
+                                <span class="launch-website-text">LAUNCH SITE</span>
+                            </div>
+                            <div class="view-on-github-button container-shadow">
+                                <svg xmlns="http://www.w3.org/2000/svg" aria-label="Github" role="img" viewBox="0 0 512 512">
+                                    <rect width="512" height="512" fill="#171515" rx="0%" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" "" ""=""></rect>
+                                    <path fill="#fff" d="M119 255c17 30 49 48 102 53-8 6-17 17-18 30-10 6-29 8-44 3-21-7-29-48-61-42-7 1-6 6 0 10 10 6 21 16 26 30 12 31 37 39 77 33v45c0 14-20 18-20 25 0 3 7 3 12 3 10 0 32-9 32-23 0-12 0-52 1-59 0-15 8-20 8-20s1 82-2 92c-4 13-10 11-10 17 0 9 26 2 35-17 7-15 4-95 3-94h7s0 37 1 53c0 17-1 39 9 50 7 7 29 19 29 8 0-6-12-12-12-29v-79c10 0 8 26 8 26l1 48s-2 18 19 25c8 3 24 3 25-1s-20-11-20-25v-49c0-36-5-49-22-60 53-5 86-18 102-53 10-20 12-44 12-62 0-50-24-67-29-76 7-38-1-55-5-60-14-5-48 12-66 24-30-9-94-8-118 2-44-31-67-26-67-26s-15 27-4 66c-15 18-25 31-26 65 0 27 3 44 15 67z"></path>
+                                </svg>
+                                <span class="view-on-github-text">VIEW ON GITHUB</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -273,6 +293,14 @@
                                 <li>Blender</li>
                                 <li>Google VR SDK</li>
                             </ul>
+                            <div class="launch-app-button ">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                                <span class="watch-promo-text">WATCH PROMO</span>
+                            </div>
+                            <div class="google-play-button ">
+                                <img class="google-play-badge" src="./assets/images/googlePlayBadge.png" alt="">
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -289,11 +317,11 @@
             <!-- <img src="./assets/images/wall-white-black-abstract-66905_scaledDown.jpeg" alt="abstract building picture"> -->
             <div class="container about-section__text-container">
                 <strong>About Me</strong>
-                <br> I am a freelance web developer specializing in user-centric design. I create responsive websites using the
-                most current technologies to provide the best user experience while satisfying customer needs. My previous
-                employment and management experience provides me with leadership skills that allow me to effectively communicate
-                with others to achieve our goals. I am a fast learner who enjoys challenges and thrives in a fast paced,
-                goal oriented environment. I currently have experience working with HTML, CSS, JavaScript, PHP, and C#.
+                <br> I am a web developer specializing in user-centric design. I create responsive websites using the most current
+                technologies to provide the best user experience while satisfying customer needs. My previous employment
+                and management experience provides me with leadership skills that allow me to effectively communicate with
+                others to achieve our goals. I am a fast learner who enjoys challenges and thrives in a fast paced, goal
+                oriented environment. I currently have experience working with HTML, CSS, JavaScript, PHP, and C#.
             </div>
         </div>
 
