bout to start alt hero

--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,7 @@
         </div>
 
         <div class="container header-container">
-            <h1 class="display-3 home-text">PAUL
-                <br>FREEMAN
-                <br>DESIGN
+            <h1 class="display-3 home-text">PAUL<br>FREEMAN<br>DESIGN
             </h1>
 
         </div>
