--- a/app/index.html
+++ b/app/index.html
@@ -25,9 +25,13 @@
 
 <body>
 
+    <div id="particles-js"></div>
+    <div class="overlay-text-wrapper">
+        <div class="overlay-text">PAUL<br>FREEMAN<br>DESIGN<br></div>
+    </div>
+    <div class="overlay-with-gradient"></div>
 
-    <div id="section-home" class="jumbotron jumbotron-fluid jumbotron--background-image container-shadow">
-        <div class="mobile-menu-container">
+    <div class="mobile-menu-container">
             <div class="mobile-logo container-shadow">
                 <div class="logo-normal-colors">
                     <div class="mobile-logo__pf">PF</div>
@@ -67,11 +71,9 @@
 
         </div>
 
-        <div class="container header-container">
-            <h1 class="display-3 home-text">PAUL<br>FREEMAN<br>DESIGN
-            </h1>
 
-        </div>
+    <div id="section-home" class="jumbotron jumbotron-fluid jumbotron--background-image">
+   
     </div>
 
     <div class="container-fluid blurb-container">
@@ -172,7 +174,7 @@
 
 
     <!-- PORTFOLIO PROJECT -->
-    <div class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding container-shadow scroll-reveal">
+    <div id="middlePageTrigger" class="container-fluid portfolio-project-container portfolio-project-container--add-t-padding container-shadow scroll-reveal">
 
         <div class="project-image-container container-shadow">
             <img class="lazyload" data-src="./assets/images/clearViewEscapes.jpg" alt="Clear View Escapes Image">
@@ -371,7 +373,7 @@
 
 
 
-
+ 
 
 
     <!-- Optional JavaScript -->
@@ -382,6 +384,8 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <script src="./assets/scripts/app.js"></script>
     <script src="./assets/scripts/jquery.waypoints.min.js"></script>
