--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 <body>
 
     <div id="particles-js"></div>
+   
     <div class="overlay-text-wrapper">
         <div class="overlay-text">PAUL<br>FREEMAN<br>DESIGN<br></div>
     </div>
@@ -105,7 +106,7 @@
         </div>
         <div class="project-description">
             <div class="project-description__header">
-                CLIMBING WALL APP
+                <a target="_blank" href="http://www.paulfreeman.design/riverside/">CLIMBING WALL APP</a >
                 <i class="fa fa-external-link" aria-hidden="true"></i>
             </div>
             <div class="project-description__description-text">
@@ -385,7 +386,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
+
+    <script src="./assets/scripts/particles.min.js"></script>
 
     <script src="./assets/scripts/app.js"></script>
     <script src="./assets/scripts/jquery.waypoints.min.js"></script>
